--- a/views/css/style.css
+++ b/views/css/style.css
@@ -12,110 +12,84 @@ p {
 }
 
 
-/************************
- * css for navbar
- * from https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_sidenav
- */
+body {
+  font-family: "Lato", sans-serif;
+}
+
 .sidenav {
-    height: 100%;
-    width: 0;
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    background-color: lightGray;
-    overflow-x: hidden;
-    transition: 0.5s;
-    padding-top: 60px;
+  height: 100%;
+  width: 0;
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  background-color: rgb(177, 177, 177);
+  overflow-x: hidden;
+  transition: 0.5s;
+  padding-top: 60px;
 }
 
 .sidenav a {
-    padding: 8px 8px 8px 32px;
-    text-decoration: none;
-    font-size: 25px;
-    color: #818181;
-    display: block;
-    transition: 0.3s;
+  padding: 8px 8px 8px 32px;
+  text-decoration: none;
+  font-size: 25px;
+  color: #383838;
+  display: block;
+  transition: 0.3s;
 }
 
 .sidenav a:hover {
-    color: #f1f1f1;
+  color: #0e0e0e;
 }
 
 .sidenav .closebtn {
-    position: absolute;
-    top: 0;
-    right: 25px;
-    font-size: 36px;
-    margin-left: 50px;
-    color: blue;
+  position: absolute;
+  top: 0;
+  right: 25px;
+  font-size: 36px;
+  margin-left: 50px;
+}
+
+#main {
+  transition: margin-left .5s;
+  padding: 16px;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+.sidenav {padding-top: 15px;}
+.sidenav a {font-size: 18px;}
 }
 
-
-/************************
- * css for toggle button
- * from https://www.w3schools.com/howto/howto_css_switch.asp
- * The switch - the box around the slider
- */
-.switch {
-  position: relative;
-  display: inline-block;
-  width: 60px;
-  height: 34px;
+.checkbox{
+  margin-left: 25px;
 }
 
-/* Hide default HTML checkbox */
-.switch input {display:none;}
-
-/* The slider */
-.slider {
-  position: absolute;
-  cursor: pointer;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background-color: #ccc;
-  -webkit-transition: .4s;
-  transition: .4s;
+.search-label{
+  display:inline-block;
+  margin-left: 10px;
+  vertical-align: middle;
 }
 
-.slider:before {
-  position: absolute;
-  content: "";
-  height: 26px;
-  width: 26px;
-  left: 4px;
-  bottom: 4px;
-  background-color: white;
-  -webkit-transition: .4s;
-  transition: .4s;
+.toggle-menu-option{
+  vertical-align: middle;
 }
 
-input:checked + .slider {
-  background-color: #2196F3;
+.detailed-criteria{
+  margin-left: 30px;
 }
 
-input:focus + .slider {
-  box-shadow: 0 0 1px #2196F3;
+.sub-option{
+  padding-left: 10px;
 }
 
-input:checked + .slider:before {
-  -webkit-transform: translateX(26px);
-  -ms-transform: translateX(26px);
-  transform: translateX(26px);
+.detail-slider, .commute-slider{
+  width: 80%; margin:auto; display:inline-block;
 }
 
-/* Rounded sliders */
-.slider.round {
-  border-radius: 34px;
+.climate-slider{
+  width: 40%; margin:auto; display:inline-block;
 }
 
-.slider.round:before {
-  border-radius: 50%;
+.temp-value{
+  width: 5%; padding-left:10px; padding-right:15px; display:inline-block;
 }
