--- a/views/css/style.css
+++ b/views/css/style.css
@@ -3,14 +3,32 @@ p {
     font-weight: bold;
 }
 
-/* google map css */
+@image: 'http://pancaketheorem.com/stuff/demos/borderimage/wood.png';
+@bgImage:'http://tumodaurbana.com/wp-content/uploads/2013/05/tumodaurbana-expo-dali.jpg';
 #map {
-    border: 1px solid black;
     height: 800px;
     /* http://stackoverflow.com/questions/1260122/expand-a-div-to-take-the-remaining-width */
     width: 1000px;
+    background:url(@bgImage);
+    background-size: cover;
+  
+    border: #2e1a12 solid 8px;
+    -webkit-border-image: url(@image) 200 stretch;
+    -moz-border-image: url(@image) 200 stretch;
+    border-image: url(@image) 200 stretch;
+    -webkit-box-shadow: inset 0px 0px 10px rgba(0,0,0,1);
 }
 
+.navbar-border{
+  background:url(@bgImage);
+  background-size: cover;
+
+  border: #2e1a12 solid 8px;
+  -webkit-border-image: url(@image) 200 stretch;
+  -moz-border-image: url(@image) 200 stretch;
+  border-image: url(@image) 200 stretch;
+  -webkit-box-shadow: inset 0px 0px 10px rgba(0,0,0,1);
+}
 
 body {
   font-family: "Lato", sans-serif;
@@ -23,17 +41,19 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: rgb(177, 177, 177);
+  background-color: #2e1a12;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
+  color: #dfdfdf;
+
 }
 
-.sidenav a {
+.sidenav a{
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: #383838;
+  color: #dfdfdf;
   display: block;
   transition: 0.3s;
 }
@@ -92,4 +112,34 @@ body {
 
 .temp-value{
   width: 5%; padding-left:10px; padding-right:15px; display:inline-block;
+}
+
+.active-criteria-holder{
+  display: inline-block;
+}
+
+ li{
+  float: left;
+  width: 150px;
+}
+
+li:nth-child(3n+1){ /*replace 4 with the number of columns*/
+  clear: left;
+}
+
+.navbar-default {
+  border: #2e1a12 solid 8px;
+}
+
+.navbar {
+  color: #dfdfdf;
+  background-color: #2e1a12;
+}
+
+.searchButtonHolder{
+  width: 90%;
+}
+
+#scope{
+  float: right;
 }
