Removed extra html folder from 33d408 Applied changes made to home.html in 33d408 to script.js (displaying a point on the map) Also made clicking the search button do a search (with hardcoded parameters). Result is logged to console.

--- a/views/home.html
+++ b/views/home.html
@@ -176,7 +176,7 @@
             </div>
             <br>
 
-            <center><div class="searchButtonHolder"><button type="button" class="btn btn-primary btn-lg btn-block">Search</button></div></center>
+            <center><div class="searchButtonHolder"><button id="search-button" type="button" class="btn btn-primary btn-lg btn-block">Search</button></div></center>
         </div>
 
         <!--where the map will be rendered-->
