--- a/views/home.html
+++ b/views/home.html
@@ -55,7 +55,7 @@
                 <h3 class="search-label">Public Schools</h3><div class="helper-text" data-toggle="tooltip" data-placement="top" title="Helper Text"><svg class="helper-svg" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zM262.655 90c-54.497 0-89.255 22.957-116.549 63.758-3.536 5.286-2.353 12.415 2.715 16.258l34.699 26.31c5.205 3.947 12.621 3.008 16.665-2.122 17.864-22.658 30.113-35.797 57.303-35.797 20.429 0 45.698 13.148 45.698 32.958 0 14.976-12.363 22.667-32.534 33.976C247.128 238.528 216 254.941 216 296v4c0 6.627 5.373 12 12 12h56c6.627 0 12-5.373 12-12v-1.333c0-28.462 83.186-29.647 83.186-106.667 0-58.002-60.165-102-116.531-102zM256 338c-25.365 0-46 20.635-46 46 0 25.364 20.635 46 46 46s46-20.636 46-46c0-25.365-20.635-46-46-46z"/></svg></div>
             </span>
             <div class="detailed-criteria" id="public-schools">
-                <span>
+                <!-- <span>
                     <span class="school-detail-option sub-option">
                         <input checked data-toggle="toggle" data-style="ios" type="checkbox" data-size="mini">
                         <h5 class="search-label">Elementary</h3>
@@ -68,6 +68,13 @@
                         <input checked data-toggle="toggle" data-style="ios" type="checkbox" data-size="mini">
                         <h5 class="search-label">Highschool</h3>
                     </span>
+                </span> -->
+                <span>
+                    <select class="form-control detailed-dropdown" id="public-schools-dropdown">
+                      <option value="0">Low Ranking</option>
+                      <option value="1">Medium Ranking</option>
+                      <option value="2">High Ranking</option>
+                    </select>
                 </span>
             </div>
             <span class="checkbox">
@@ -81,9 +88,9 @@
                         <div class="detail-slider-value" id="public-transportation-slider-value" style="width: 10%; padding-left: 10px; margin:auto; display:inline-block;">100</div>
                     </span> -->
                     <select class="form-control detailed-dropdown" id="public-transportation-dropdown">
-                      <option>Low Availability</option>
-                      <option>Medium Availability</option>
-                      <option>High Availability</option>
+                      <option value="0">Low Availability</option>
+                      <option value="1">Medium Availability</option>
+                      <option value="2">High Availability</option>
                     </select>
                 </span>
             </div>
@@ -94,8 +101,8 @@
             <div class="detailed-criteria" id="crime">
                 <span>
                     <select class="form-control detailed-dropdown" id="crime-dropdown">
-                      <option>Low Crime Rate</option>
-                      <option>Average Crime Rate</option>
+                      <option value="0">Low Crime Rate</option>
+                      <option value="1">Average Crime Rate</option>
                     </select>
                 </span>
             </div>
@@ -134,19 +141,19 @@
             <div class="detailed-criteria" id="climate">
                 <span>
                     <select class="form-control detailed-dropdown" id="climate-dropdown">
-                      <option>No Preference</option>
-                      <option>Hotter</option>
-                      <option>Colder</option>
+                      <option value="0">No Preference</option>
+                      <option value="1">Hotter</option>
+                      <option value="2">Colder</option>
                     </select>
                     <select class="form-control detailed-dropdown secondary-option" id="rain-dropdown">
-                      <option>Low Annual Percipitation</option>
-                      <option>Medium Annual Percipitation</option>
-                      <option>High Annual Percipitation</option>
+                      <option value="0">Low Annual Percipitation</option>
+                      <option value="1">Medium Annual Percipitation</option>
+                      <option value="2">High Annual Percipitation</option>
                     </select>
                     <select class="form-control detailed-dropdown secondary-option" id="snow-dropdown">
-                      <option>Low Annual Snowfall</option>
-                      <option>Medium Annual Snowfall</option>
-                      <option>High Annual Snowfall</option>
+                      <option value="0">Low Annual Snowfall</option>
+                      <option value="1">Medium Annual Snowfall</option>
+                      <option value="2">High Annual Snowfall</option>
                     </select>
                 </span>
             </div>
@@ -157,8 +164,8 @@
             <div class="detailed-criteria" id="health-care">
                 <span>
                     <select class="form-control detailed-dropdown" id="healthcare-dropdown">
-                      <option>Average number of doctors to patients</option>
-                      <option>High number of doctors to patients</option>
+                      <option value="0">Average number of doctors to patients</option>
+                      <option value="1">High number of doctors to patients</option>
                     </select>
                 </span>
             </div>
