Added more modals and help messages

--- a/views/home.html
+++ b/views/home.html
@@ -59,7 +59,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered by public school ranking.
+        			<p>When activated, search results are filtered on public school ranking.
 				<br>
 				<br>&bull; Low Ranking: Graduation rate less than 33rd percentile of national rates.<br>
 				<br>&bull; Medium Ranking: Graduation rate between 33rd percentile and 66th percentile of national rates.<br>
@@ -104,7 +104,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered by availability of public transportation.
+        			<p>When activated, search results are filtered on availability of public transportation.
 				<br>
 				<br>&bull; Low Availability: Public transportation usage less than 33rd percentile of national rates.<br>
 				<br>&bull; Medium Availability: Public transportation usage between 33rd and 66th percentile of national rates.<br>
@@ -139,7 +139,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered by crime rate.
+        			<p>When activated, search results are filtered on crime rate.
 				<br>
 				<br>&bull; Low Crime Rate: Crime rate less than 33rd percentile of national rates.<br>
 				<br>&bull; Average Crime Rate: Crime Rate between 33rd and 66th percentile of national rates.
@@ -168,7 +168,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered by availablity of outdoor recreation activities. Activating a subslider includes filtering on that activity (e.g. activating the hiking slider narrows the results to areas where hiking is possible).
+        			<p>When activated, search results are filtered on availablity of outdoor recreation activities. Activating a subslider includes filtering on that activity (e.g. activating the hiking slider narrows the results to areas where hiking is possible).
 				<br>
 				</p>
       			    </div>
