--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,8 @@
         <script src="js/script.js"></script>
         <!-- import google maps api (using my api key) -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbzToWwyvwuRG5xYmLdH11JYVfF7x_2aE&callback=initMap&libraries=places" async defer></script>
-
+		<script src="/code_fury/views/js/markerclusterer.js" type="text/javascript"></script>
+	
         <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
