Manually adjusted search ranges for public transporation to get useful results.

--- a/views/home.html
+++ b/views/home.html
@@ -107,9 +107,9 @@
 				<br>
         			<p>When activated, search results are filtered on availability of public transportation.
 				<br>
-				<br>&bull; Low Availability: Public transportation usage less than 33rd percentile of national rates.<br>
-				<br>&bull; Medium Availability: Public transportation usage between 33rd and 66th percentile of national rates.<br>
-				<br>&bull; High Availability: Public transportation usage greater than 66th percentile of national rates.
+				<br>&bull; Low Availability: Less than 1% of the local population commutes with public transportation.<br>
+				<br>&bull; Medium Availability: Between 1% and 7% of the local population commutes with public transportation.<br>
+				<br>&bull; High Availability: Greater than 7% of the local population commutes with public transportation.
 				<br>
 				<br>Results of searches for low availability include areas with medium and high availability. Likewise, results of searches for medium availability include areas with high availability.
 				</p>
