Fixed issue where we each had to keep changing the path location of search.php and mapclusters  js. Made rec center search OR the activitives together instead of AND.

--- a/views/home.html
+++ b/views/home.html
@@ -15,7 +15,7 @@
         <script src="js/script.js"></script>
         <!-- import google maps api (using my api key) -->
         <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAbzToWwyvwuRG5xYmLdH11JYVfF7x_2aE&callback=initMap&libraries=places" async defer></script>
-		<script src="/views/js/markerclusterer.js" type="text/javascript"></script>
+		<script src="js/markerclusterer.js" type="text/javascript"></script>
 	
         <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
         <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
@@ -169,7 +169,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered on availablity of outdoor recreation activities. Activating a subslider includes filtering on that activity (e.g. activating the hiking slider narrows the results to areas where hiking is possible).
+        			<p>When activated, search results are filtered on availablity of outdoor recreation activities. Only locations that have one or more of the enabled activites are returned by the search.
 				<br>
 				</p>
       			    </div>
