--- a/views/home.html
+++ b/views/home.html
@@ -140,7 +140,7 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>When activated, search results are filtered on crime rate.
+        			<p>When activated, search results are filtered on crime rate (violent crimes per 100,000 people).
 				<br>
 				<br>&bull; Low Crime Rate: Crime rate less than 33rd percentile of national rates.<br>
 				<br>&bull; Average Crime Rate: Crime Rate between 33rd and 66th percentile of national rates.
@@ -218,7 +218,14 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>INSERT HELPER TEXT HERE</p>
+        		<p>When activated, search results are filtered on climate type.
+				<br>
+				<br>&bull; "No preference" will not narrow the search. Colder corresponds to below the 50th percentile, while hotter corresponds to above the 50th percentile.<br>
+				<br>&bull; Low, medium, and high annual precipitation correspond to below the 33rd percentile, between the 33rd and 66th percentiles, and above the 66th percentile respectively.<br>
+				<br>&bull; Low, medium, and high annual snowfall correspond to below the 33rd percentile, between the 33rd and 66th percentiles, and above the 66th percentile respectively.
+				<br>
+				<br>Searches for low conditions include results for searches for high conditions.
+				</p>
       			    </div>
     			</div>
   		    </div>
@@ -252,7 +259,13 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>INSERT HELPER TEXT HERE</p>
+        			<p>When activated, search results are filtered on availability of quality health care.
+				<br>
+				<br>&bull; Average doctor to patient ratio: Doctor to patient ratio matches the national average.<br>
+				<br>&bull; High doctor to patient ratio: Doctor to patient ratio is higher than the national average.
+				<br>
+				<br>Results of searches for average ratios include results of searches for high ratios.
+				</p>
       			    </div>
     			</div>
   		    </div>
@@ -275,7 +288,11 @@
 	                    <div class="modal-body">
 			        <button type="button" class="close" data-dismiss="modal">&times;</button>
 				<br>
-        			<p>INSERT HELPER TEXT HERE</p>
+        			<p>When activated, search results are filtered on commute time.
+				<br>
+				<br>&bull; Commute time slider value corresponds average commute time in minutes.<br>
+				<br>Results of searches for average commute time value include results for searches below that value.
+				</p>
       			    </div>
     			</div>
   		    </div>
